--- a/public/javascripts/ng-templates/main/movie-card.tpl.html
+++ b/public/javascripts/ng-templates/main/movie-card.tpl.html
@@ -5,10 +5,10 @@
     <div style="clear: both;"></div>
     <div class="movie-title">{{m.title}} ({{m.year}})</div>
     <div class="movie-properties">
-        <div class="movie-prop">Страна: {{m.country}}</div>
-        <div class="movie-prop">Режисер: {{m.director}}</div>
-        <div class="movie-rating">IMDB: {{m.imdb}}</div>
-        <div class="movie-rating">Kinopoisk: {{m.kinopoisk}}</div>
-        <div class="movie-desc">{{m.description}}</div>
+        <div class="movie-prop"><b>Страна: </b>{{m.country}}</div>
+        <div class="movie-prop"><b>Режисер: </b>{{m.director}}</div>
+        <div class="movie-rating"><b>IMDB: </b>{{m.imdb}}</div>
+        <div class="movie-rating"><b>Kinopoisk: </b>{{m.kinopoisk}}</div>
+        <div class="movie-desc">{{m.description}}<a href="#">asdf</a></div>
     </div>
 </div>
