--- a/public/javascripts/ng-templates/main/blog.tpl.html
+++ b/public/javascripts/ng-templates/main/blog.tpl.html
@@ -1,1 +1,25 @@
-<h1>Blog</h1>
+<div class="container">
+    <h1>Blog</h1>
+
+    <div class="row">
+        <div class="col-lg-10 col-md-10 col-sm-10">
+            <div class="article">
+                <div class="title">Exsample article #1</div>
+                <div class="info">
+                        <span>author: admin</span>
+                        <span>date: 14.11.2016</span>
+                </div>
+                <div class="content">
+
+                    <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезызвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.</p>
+
+                    <p>По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых клиентов недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.</p>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-2">
+
+        </div>
+    </div>
+</div>
