--- a/public/javascripts/ng-templates/main/blog.tpl.html
+++ b/public/javascripts/ng-templates/main/blog.tpl.html
@@ -1,14 +1,12 @@
 <div class="container">
     <h1>Blog</h1>
 
-    <div class="row">
-        <div class="col-lg-10 col-md-10 col-sm-10">
+    <div class="row" >
+        <div class="col-lg-10 col-md-10 col-sm-10" style="text-align: center">
             <div class="article">
+                <img class="image" ng-src="{{a.img || '/images/no-image-available.png'}}" />
                 <div class="title">Exsample article #1</div>
-                <div class="info">
-                        <span>author: admin</span>
-                        <span>date: 14.11.2016</span>
-                </div>
+
                 <div class="content">
 
                     <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезызвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.</p>
@@ -16,10 +14,44 @@
                     <p>По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых клиентов недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.</p>
 
                 </div>
+                <div class="info">
+                    <span class="date col-sm-4 col-lg-4 col-md-4">14.11.2016</span>
+                    <span class="tags">
+                        <ul>
+                            <li><a href>All</a></li>
+                            <li><a href>Featured</a></li>
+                        </ul>
+                    </span>
+                </div>
+            </div>
+            <div class="article">
+                <img class="image" ng-src="{{a.img || '/images/no-image-available.png'}}" />
+                <div class="title">Exsample article #2</div>
+
+                <div class="content">
+
+                    <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезызвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия.</p>
+
+                    <p>По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых клиентов недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.</p>
+
+                </div>
+
+                <div class="info">
+                    <span class="date col-sm-4 col-lg-4 col-md-4">21.11.2016</span>
+                    <span class="tags">
+                        <ul>
+                            <li><a href>All</a></li>
+                            <li><a href>Featured</a></li>
+                            <li><a href>Movies</a></li>
+                        </ul>
+                    </span>
+                </div>
             </div>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2">
-
+            <div class="widget">
+                <popular-vidgets></popular-vidgets>
+            </div>
         </div>
     </div>
 </div>
